--- a/index.html
+++ b/index.html
@@ -24,26 +24,21 @@
     <p>Buka halaman ini dari handphone Anda</p>
 
     <div>
-      <div class="small">IP Publik:</div>
+      <div class="small">ID kode reedem:</div>
       <div id="ip" class="ip">—</div>
       <div id="meta" class="meta"></div>
     </div>
 
     <div style="margin-top:12px" class="row">
-      <button id="refresh">Refresh IP</button>
-      <button id="copy">Salin IP</button>
+      <button id="refresh">Refresh kode reedem</button>
+      <button id="copy">Salin Kode reedem</button>
       <button id="screenshot" onclick="alert('Gunakan fitur tangkapan layar perangkat Anda untuk menyimpan bukti.')">Ambil Screenshot</button>
     </div>
 
     <hr style="margin:16px 0" />
 
     <div>
-      <div class="small">Kirim otomatis IP ke webhook (opsional)</div>
-      <p class="small">Masukkan URL webhook (contoh: URL endpoint yang Anda kontrol). Jika kosong, data tidak akan dikirim.</p>
-      <input id="webhook" placeholder="https://example.com/webhook" style="width:100%" />
-      <div class="row" style="margin-top:8px">
-        <button id="send">Kirim ke webhook sekarang</button>
-        <button id="auto">Share</button>
+    
       </div>
       <div id="status" class="small"></div>
     </div>
